grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check
const binary_operators = [
  "*",
  "/",
  "%",
  "+",
  "-",
  "<<",
  ">>",
  "<=>",
  "<",
  ">",
  "<=",
  ">=",
  "==",
  "!=",
  "&",
  "^",
  "|",
  "&&",
  "||",
  "..<",
  "..=",
  // assignment operators
  "=",
  "*=",
  "/=",
  "%=",
  "+=",
  "-=",
  ">>=",
  "<<=",
  "&=",
  "^=",
  "|=",
];

module.exports = grammar({
  name: "cpp2",
  conflicts: ($) => [
    [$.no_namespace_identifier, $.template_identifier],
    [$.unary_postfix_expression, $.binary_expression],
    [$.unary_prefix_expression, $.binary_expression],
    [$.function_type, $.left_side_of_definition],
    [$.declaration, $.block_statement],
  ],

  precedences: ($) => [
    [
      $.method_call,
      $.member_access,
      $.function_call,
      $.bracket_call,
      $.unary_postfix_expression,
      $.unary_prefix_expression,
    ],
    binary_operators,
    [$.type, $.binary_expression],
    [$.function_declaration_argument, $.expression],
    [$.function_type_without_return_type, $.parentheses_expression],
    [$.comma_expressions, $.expression_or_comma_expressions],
    [$.expression_or_comma_expressions, $.type],
  ],

  rules: {
    source_file: ($) => repeat(choice($.declaration, ";")),

    declaration: ($) =>
      choice(
        $.no_definition_declaration,
        $.block_declaration,
        $.expression_declaration,
      ),

    block_declaration: ($) =>
      seq($.non_template_identifier, $.block_definition),

    expression_declaration: ($) =>
      seq($.non_template_identifier, $.expression_definition),

    no_definition_declaration: ($) =>
      seq($.non_template_identifier, ":", $.type),

    definition: ($) => choice($.block_definition, $.expression_definition),

    block_definition: ($) => prec.left(seq($.left_side_of_definition, $.block)),

    expression_definition: ($) =>
      prec.left(seq($.left_side_of_definition, $.expression)),

    left_side_of_definition: ($) =>
      seq(
        ":",
        optional($.metafunction_arguments),
        optional($.template_declaration_arguments),
        choice(
          seq(optional($.type), choice("=", "==")),
          $.function_type_without_return_type,
        ),
      ),

    metafunction_arguments: ($) => repeat1(seq("@", $.any_identifier)),

    // we need this to prefer closing templates to the >> operator
    template_close_token: ($) => token(prec(1, ">")),

    template_declaration_arguments: ($) =>
      seq("<", $.comma_seperated_declarations, $.template_close_token),

    template_call_arguments: ($) =>
      prec.right(
        seq(
          "<",
          $.expression_or_comma_expressions,
          optional(","),
          $.template_close_token,
        ),
      ),

    any_identifier: ($) =>
      choice($.no_namespace_identifier, $.namespaced_identifier),

    namespaced_identifier: ($) =>
      seq(
        choice(seq($.no_namespace_identifier, "::"), " ::"),
        $.no_namespace_identifier,
        repeat(seq("::", $.no_namespace_identifier)),
      ),

    no_namespace_identifier: ($) =>
      choice($.non_template_identifier, $.template_identifier),

    template_identifier: ($) =>
      seq($.non_template_identifier, $.template_call_arguments),

    non_template_identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    type: ($) =>
      choice(
        seq(
          repeat(choice("const", "*")),
          choice($.expression, $.function_type),
        ),
        $.type_type,
      ),

    type_type: ($) => "type",

    function_type_without_return_type: ($) =>
      seq("(", optional($.comma_seperated_declarations), optional(","), ")"),

    comma_seperated_declarations: ($) =>
      prec.right(
        seq(
          $.function_declaration_argument,
          repeat(seq(",", $.function_declaration_argument)),
        ),
      ),

    function_type: ($) =>
      seq(
        $.function_type_without_return_type,
        optional(seq("->", optional($.passing_style), $.type)),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        $.block_statement,
        seq(
          optional(choice($.declaration, $.return_statement, $.expression)),
          ";",
        ),
      ),

    block_statement: ($) => choice($.block_declaration, $.block),

    expression: ($) =>
      choice(
        $.literal,
        $.any_identifier,
        $.function_call,
        $.method_call,
        $.member_access,
        $.bracket_call,
        $.unary_expression,
        $.binary_expression,
        $.parentheses_expression,
        $.definition,
      ),

    unary_expression: ($) =>
      choice($.unary_prefix_expression, $.unary_postfix_expression),

    unary_postfix_expression: ($) =>
      seq(
        $.expression,
        // the reason we have &&  additionally to & is for issues
        // with conflicting tokenization with the binary operator &&
        choice("++", "--", "*", "&", "&&", "~", "$", "..."),
      ),

    unary_prefix_expression: ($) => seq(choice("-", "+", "!"), $.expression),

    binary_expression: ($) => {
      return choice(
        ...binary_operators.map((operator) => {
          return prec.right(
            operator,
            seq($.expression, operator, $.expression),
          );
        }),
      );
    },

    expression_or_comma_expressions: ($) =>
      prec.left(choice($.type, $.expression, $.comma_expressions)),

    comma_expressions: ($) =>
      seq(choice($.expression, $.type), ",", $.expression_or_comma_expressions),

    parentheses_expression: ($) =>
      seq("(", optional($.expression_or_comma_expressions), optional(","), ")"),

    function_call: ($) => seq($.expression, $.parentheses_expression),

    bracket_call: ($) =>
      seq(
        $.expression,
        "[",
        optional($.expression_or_comma_expressions),
        optional(","),
        "]",
      ),

    method_call: ($) =>
      seq(
        $.expression,
        choice(".", ".."),
        $.any_identifier,
        $.parentheses_expression,
      ),

    member_access: ($) =>
      seq($.expression, choice(".", ".."), $.any_identifier),

    function_declaration_argument: ($) =>
      seq(optional($.passing_style), choice($.declaration, $.any_identifier)),

    passing_style: ($) =>
      choice("in", "copy", "inout", "out", "move", "forward"),

    return_statement: ($) => seq("return", $.expression),

    literal: ($) => choice($.number, $.string, $.float, $.boolean),

    number: ($) => /\d+/,
    string: ($) => /"([^"\\]|\\.)*"/,
    float: ($) => /\d+\.\d+/,
    boolean: ($) => choice("true", "false"),
  },
});
